Name:               iptables-helpers
Version:            0.5.0
Synopsis:           iptables rules parser/printer library
License:            BSD3
License-file:       LICENSE
Author:             Evgeny Tarasov
Maintainer:         etarasov.ekb@gmail.com
Category:           Text
Build-type:         Simple
Cabal-Version:      >=1.8

Source-Repository head
    type:           git
    location:       https://github.com/etarasov/iptables-helpers.git

Library
    Exposed-modules:
                    Iptables
                    Iptables.Parser
                    Iptables.Print
                    Iptables.Types

    Build-depends:
                    base >=4 && <5,
                    parsec >= 2.1,
                    mtl >= 1.1,
                    safe >= 0.3,
                    containers >= 0.4 && < 0.6,
                    utf8-string >=0.3 && < 0.4,
                    prettify >= 1.0

  -- Other-modules:

    Hs-Source-Dirs: src

    Ghc-options:    -Wall -fno-warn-unused-do-bind

--Executable iptables-helpers-test
--    HS-Source-Dirs: test
--    Main-Is:        Test.hs
--    Build-depends:
--                    base >= 4 && < 5,
--                    syb >= 0.3 && < 0.4,
--                    QuickCheck >= 2.5,
--                    containers >= 0.4 && < 0.6,
--                    iptables-helpers
--    ghc-options:    -Wall -fno-warn-unused-do-bind

Test-Suite doctest
  Type:             exitcode-stdio-1.0
  HS-Source-Dirs:   test
  Ghc-Options:      -threaded -Wall
  Main-Is:          doctests.hs
  Build-Depends:    base == 4.*,
                    doctest >= 0.8,
                    QuickCheck >= 2.5,
                    containers >= 0.4 && < 0.6

Test-Suite spec
  Type:             exitcode-stdio-1.0
  Hs-Source-Dirs:   test
  Ghc-Options:      -Wall
  Main-Is:          Spec.hs
  Other-Modules:    Iptables.Types.Arbitrary
  Build-Depends:    base == 4.*,
                    hspec >= 1.3,
                    QuickCheck >= 2.5,
                    containers >= 0.4 && < 0.6,
                    iptables-helpers
